--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         <span class="tag">WordPress • Elementor </span>
                     </div>
                 </a>
-                <a class="project" href="https://nbican.com/" target="_blank" rel="noopener">
+                <a class="project" href="http://novex.buzzitseo.com/" target="_blank" rel="noopener">
                     <div class="thumb  project-thumb" style="background-image: url('images/p-9.jpg');">
                         <span class="tag">WordPress • Elementor </span>
                     </div>
